--- a/app/src/main/res/layout/content_accueil.xml
+++ b/app/src/main/res/layout/content_accueil.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".Accueil_activity"
+    tools:showIn="@layout/activity_accueil">
 
     <TextView
         android:layout_width="wrap_content"
