--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,15 +7,15 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.webuy.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.example.webuy.ui.accueil.AccueilFragment"
+        android:label="@string/menu_accueil"
+        tools:layout="@layout/fragment_accueil" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.webuy.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:name="com.example.webuy.ui.magasins.MagasinsFragment"
+        android:label="@string/menu_magasins"
+        tools:layout="@layout/fragment_magasins" />
 
     <fragment
         android:id="@+id/nav_slideshow"
