RecyclerView pour l'onglet "Magasins" effectif.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#4C278B</color>
     <color name="colorPrimaryDark">#673AB7</color>
     <color name="colorAccent">#FF5722</color>
-    <color name="colorDarkBackground">#4D4D4D</color>
+    <color name="colorDarkBackground">#3B344D</color>
 </resources>
