--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -16,23 +16,29 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic__menu_achat"
             android:title="@string/menu_achats" />
-
+        <item
+            android:id="@+id/nav_send"
+            android:icon="@drawable/ic_action_connection"
+            android:title="@string/menu_connection" />
+        <item
+            android:id="@+id/nav_share"
+            android:icon="@drawable/ic_action_amis"
+            android:title="@string/menu_amis" />
     </group>
 
 
+
+    <item android:title="">
         <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_amis" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+
+
             <item
                 android:id="@+id/nav_tools"
-                android:icon="@drawable/ic_menu_manage"
+                android:icon="@drawable/ic_settings"
                 android:title="@string/menu_option" />
+
         </menu>
-    
+    </item>
+
+
 </menu>
