--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,7 +35,7 @@
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
                     android:cropToPadding="false"
-                    android:src="@drawable/renardSurFondBlanc"
+                    android:src="@drawable/"
                     app:civ_border_color="@color/imageBorderColor"
                     app:civ_border_width="2dp" />
 
