--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:gl="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.appsnipp.schooleducation.MainActivity"
+    tools:context="com.appsnipp.Webuy.MainActivity"
     tools:showIn="@layout/app_bar_main"
     style="@style/parent.contentLayout">
 
