--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,19 +9,19 @@
             android:icon="@drawable/ic_home"
             android:title="@string/menu_accueil" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_shop"
             android:icon="@drawable/ic_menu_magasins"
             android:title="@string/menu_magasins" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_buy"
             android:icon="@drawable/caddie"
             android:title="@string/menu_achats" />
         <item
-            android:id="@+id/nav_send"
+            android:id="@+id/nav_connexion"
             android:icon="@drawable/connection"
             android:title="@string/menu_connection" />
         <item
-            android:id="@+id/nav_share"
+            android:id="@+id/nav_friends"
             android:icon="@drawable/groupe"
             android:title="@string/menu_amis" />
     </group>
