--- a/app/src/main/res/menu/master_bottom_navigation.xml
+++ b/app/src/main/res/menu/master_bottom_navigation.xml
@@ -7,7 +7,7 @@
         android:title="@string/menu" />
 
     <item
-        android:id="@+id/navigationNotification"
+        android:id="@+id/navigationMyCourses"
         android:icon="@drawable/notification"
         android:title="@string/Notification" />
 
@@ -17,7 +17,7 @@
         android:title="@string/Home" />
 
     <item
-        android:id="@+id/navigationConnection"
+        android:id="@+id/navigationSearch"
         android:icon="@drawable/ic_user"
         android:title="@string/Profil" />
 
