--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--colors for dark mode-->
+    <color name="colorPrimary">#363636</color>
     <color name="contentBodyColor">#D7000000</color>
     <color name="contentTextColor">#fff</color>
     <color name="bottomNavigationBackground">#000000</color>
