--- a/app/src/main/res/layout/promotions_recycler_item.xml
+++ b/app/src/main/res/layout/promotions_recycler_item.xml
@@ -17,8 +17,7 @@
         android:minHeight="150dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="10dp"
-        app:cardPreventCornerOverlap="false"
-        android:clickable="true">
+        app:cardPreventCornerOverlap="false">
 
         <LinearLayout
             android:background="#fff"
