--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -18,7 +18,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="WeBuy"
+            android:text="@string/titreConnection"
             android:textColor="#E91E63"
             android:textSize="50sp"
             android:textStyle="bold"
@@ -26,35 +26,31 @@
             android:layout_marginBottom="80dp"/>
 
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#7E7E7E"
-            android:text="Email" />
+
 
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/identifiant"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:layout_marginBottom="20dp"/>
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="@string/prompt_email"
+            android:textColorHint="#7E7E7E"
             android:textColor="#7E7E7E"
-            android:text="Mot de passe" />
+            />
+
 
         <EditText
-            android:id="@+id/editText5"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColorHint="#7E7E7E"
+            android:hint="@string/prompt_password"
             android:ems="10"
-            android:inputType="textPassword"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:textColor="#7E7E7E"
+            />
 
         <Button
             android:id="@+id/button2"
@@ -68,15 +64,16 @@
 
         <TextView
             android:layout_marginTop="15dp"
-            android:id="@+id/textView4"
+            android:id="@+id/inscription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="S'inscrire"
+            android:text="@string/inscription"
             android:textColor="#E91E63"
             android:textAlignment="center"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            />
 
 
-    </LinearLayout>
+    </LinearLayout>a
 
 </androidx.constraintlayout.widget.ConstraintLayout>
