--- a/app/src/main/res/drawable/btn_inscription.xml
+++ b/app/src/main/res/drawable/btn_inscription.xml
@@ -5,7 +5,7 @@
     <corners
     android:radius="25dp"/>
     <solid
-    android:color="#E91E63" />
+    android:color="@color/gradientOrange" />
     <stroke
-    android:color="#E91E63"/>
+    android:color="@color/gradientOrange"/>
 </shape>
