--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -9,62 +9,54 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingHorizontal="20dp"
+        android:layout_gravity="center"
+        android:background="@color/contentBodyColor"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
 
             <!--Example with RelativeLayout and Gradient Drawable -->
             <!-- for Recycler view use any of the layout as model-->
 
-            <TextView
-                style="@style/viewParent.headerText"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/app_name" />
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                >
+
+                <ImageView
+                    android:id="@+id/menu"
+                    android:layout_width="30dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/icone_menu"
+                    android:tint="@color/darkTextColor"
+                    />
+
+                <SearchView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:animationCache="false"
+                    android:clipChildren="false"
+                    android:iconifiedByDefault="false"
+                    android:queryHint="@string/TitreSection1"
+                    android:tint="@color/darkTextColor"
+                    />
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="15dp"
                 app:cardPreventCornerOverlap="true"
-                android:layout_marginTop="10dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:minHeight="100dp"
-                    android:background="@drawable/home_gradient_maths"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/textViewSub1Title"
-                        style="@style/viewParent.headerText.HomeCardTitle"
-                        android:layout_width="253dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/TitreSection1"
-                        android:textSize="23dp" />
-
-                    <TextView
-                        style="@style/viewParent.headerText.homeCardContent"
-                        android:layout_width="237dp"
-                        android:layout_height="67dp"
-                        android:layout_below="@id/textViewSub1Title"
-                        android:text="@string/DescriptionSection1" />
-
-                    <ImageView
-                        style="@style/homeCardImage"
-                        android:layout_width="93dp"
-                        android:layout_height="68dp"
-                        android:maxHeight="90dp"
-                        android:src="@drawable/caddie" />
-
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
+                android:layout_marginTop="10dp"/>
 
 
             <!--if the second one is used as model for recyclerView, refer:
@@ -83,8 +75,7 @@
                     android:layout_height="match_parent"
                     android:minHeight="100dp"
                     gl:start_color="@color/gradientOrange"
-                    gl:end_color="@color/gradientOrange1"
-                    gl:orientation="LEFT_RIGHT"
+                    gl:end_color="@color/gradientOrange"
                     android:padding="10dp">
 
                     <TextView
@@ -123,9 +114,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:minHeight="100dp"
-                    gl:end_color="@color/gradientOrange1"
-                    gl:start_color="@color/gradientOrange2"
-                    gl:orientation="LEFT_RIGHT"
+                    gl:start_color="@color/gradientOrange"
+                    gl:end_color="@color/gradientOrange"
                     android:padding="10dp">
 
                     <TextView
@@ -163,9 +153,8 @@
                     android:layout_height="match_parent"
                     android:minHeight="100dp"
                     android:padding="10dp"
-                    gl:end_color="@color/gradientOrange3"
-                    gl:orientation="LEFT_RIGHT"
-                    gl:start_color="@color/gradientOrange2">
+                    gl:start_color="@color/gradientOrange"
+                    gl:end_color="@color/gradientOrange">
 
                     <TextView
                         android:id="@+id/textViewSub4Title"
