--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="navigation_view"
+    >
 
     <group android:checkableBehavior="single">
+
+
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home"
-            android:title="@string/menu_accueil" />
+            android:title="@string/menu_accueil"
+            />
         <item
             android:id="@+id/nav_shop"
             android:icon="@drawable/ic_menu_magasins"
-            android:title="@string/menu_magasins" />
+            android:title="@string/menu_magasins"
+
+            />
         <item
             android:id="@+id/nav_buy"
             android:icon="@drawable/caddie"
-            android:title="@string/menu_achats" />
+            android:title="@string/menu_achats"
+
+            />
         <item
             android:id="@+id/nav_connexion"
             android:icon="@drawable/connection"
-            android:title="@string/menu_connection" />
+            android:title="@string/menu_connection"
+
+            />
         <item
             android:id="@+id/nav_friends"
             android:icon="@drawable/groupe"
-            android:title="@string/menu_amis" />
+            android:title="@string/menu_amis"
+
+            />
     </group>
 
 
@@ -42,7 +54,7 @@
 
             <item
                 android:id="@+id/dark_mode"
-                android:icon="@drawable/nuit"
+                android:icon="@drawable/ic_nuit"
                 android:title="@string/menu_DarkMode" />
         </menu>
     </item>
